JDK 12 migration