@@ -1,2 +1,2 @@
 #!/bin/bash
-java -jar -Dspring.profiles.active=production /opt/volleyball-referee-api-3.0.jar
+java -jar -Dspring.profiles.active=production --enable-preview /opt/volleyball-referee-api-3.0.jar
